Fix level and card

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1863,14 +1863,6 @@ input[type="submit"].button {
   margin-right: -1px;
 }
 
-.field.has-addons .control:hover {
-  z-index: 2;
-}
-
-.field.has-addons .control:focus, .field.has-addons .control:active {
-  z-index: 3;
-}
-
 .field.has-addons .control:first-child .button,
 .field.has-addons .control:first-child .input,
 .field.has-addons .control:first-child .select select {
@@ -1889,6 +1881,20 @@ input[type="submit"].button {
 .field.has-addons .control .input,
 .field.has-addons .control .select select {
   border-radius: 0;
+}
+
+.field.has-addons .control .button:hover,
+.field.has-addons .control .input:hover,
+.field.has-addons .control .select select:hover {
+  z-index: 2;
+}
+
+.field.has-addons .control .button:focus, .field.has-addons .control .button:active,
+.field.has-addons .control .input:focus,
+.field.has-addons .control .input:active,
+.field.has-addons .control .select select:focus,
+.field.has-addons .control .select select:active {
+  z-index: 3;
 }
 
 .field.has-addons .control.is-expanded {
