--- a/docs/documentation/components/level.html
+++ b/docs/documentation/components/level.html
@@ -41,12 +41,16 @@ doc-subtab: level
             </p>
           </div>
           <div class="level-item">
-            <p class="control has-addons">
-              <input class="input" type="text" placeholder="Find a post">
-              <button class="button">
-                Search
-              </button>
-            </p>
+            <div class="field has-addons">
+              <p class="control">
+                <input class="input" type="text" placeholder="Find a post">
+              </p>
+              <p class="control">
+                <button class="button">
+                  Search
+                </button>
+              </p>
+            </div>
           </div>
         </div>
         <div class="level-right structure-item" title="level-right">
@@ -82,12 +86,16 @@ doc-subtab: level
       </p>
     </div>
     <div class="level-item">
-      <p class="control has-addons">
-        <input class="input" type="text" placeholder="Find a post">
-        <button class="button">
-          Search
-        </button>
-      </p>
+      <div class="field has-addons">
+        <p class="control">
+          <input class="input" type="text" placeholder="Find a post">
+        </p>
+        <p class="control">
+          <button class="button">
+            Search
+          </button>
+        </p>
+      </div>
     </div>
   </div>
 
