--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2442,7 +2442,7 @@ input[type="submit"].button {
 
 .tag .delete {
   margin-left: 0.25em;
-  margin-right: -0.5em;
+  margin-right: -0.375em;
 }
 
 .tag.is-white {
@@ -6420,7 +6420,19 @@ html.route-index #carbon {
   color: white;
 }
 
-#mc_embed_signup .control {
+#about .twitter-container {
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  margin-top: 5px;
+}
+
+#about small {
+  display: block;
+  margin-top: 5px;
+}
+
+#mc_embed_signup .field {
   margin-bottom: 0;
 }
 
@@ -6428,29 +6440,43 @@ html.route-index #carbon {
   margin-top: 0.75rem;
 }
 
+#share form {
+  height: 30px;
+  margin-top: 10px;
+}
+
 #social {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 1em;
-  justify-content: center;
+  margin-top: 5px;
+  justify-content: flex-start;
 }
 
 #social a {
   display: inline-block;
   font-size: 11px;
-  height: 20px;
-  line-height: 20px;
-  margin: 5px;
-}
-
-#social iframe {
-  margin: 5px;
+  height: 30px;
+  line-height: 30px;
 }
 
 #newsletter .input {
   border-color: white;
   box-shadow: none;
+}
+
+#sister ul {
+  display: flex;
+}
+
+#sister li {
+  display: flex;
+  height: 30px;
+  margin: 5px 1rem 0 0;
+}
+
+#sister img {
+  height: 30px;
 }
 
 #images tr td:nth-child(2) {
@@ -6668,8 +6694,8 @@ html.route-index #carbon {
   border-radius: 5px;
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
   display: block;
+  line-height: 1.25;
   margin-top: 15px;
-  max-width: 400px;
   padding: 15px;
   padding-left: 70px;
   position: relative;
@@ -6711,16 +6737,19 @@ html.route-index #carbon {
   #_default_ {
     display: flex;
     justify-content: center;
-    padding: 0 60px;
     position: relative;
   }
   #_default_ .default-ad {
+    left: 100%;
+    margin-left: 2rem;
     position: absolute;
-    right: 0;
     top: 0;
   }
   #_default_ > a {
-    margin: 0 20px;
+    margin: 0;
+  }
+  #_default_ > a:not(:nth-child(2)) {
+    margin-left: 2rem;
   }
 }
 
