--- a/docs/sass/bsa.sass
+++ b/docs/sass/bsa.sass
@@ -16,8 +16,8 @@
     border-radius: $radius-large
     box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
     display: block
+    line-height: 1.25
     margin-top: 15px
-    max-width: 400px
     padding: 15px
     padding-left: 70px
     position: relative
@@ -47,11 +47,13 @@
   #_default_
     display: flex
     justify-content: center
-    padding: 0 60px
     position: relative
     .default-ad
+      left: 100%
+      margin-left: 2rem
       position: absolute
-      right: 0
       top: 0
     & > a
-      margin: 0 20px
+      margin: 0
+      &:not(:nth-child(2))
+        margin-left: 2rem
