--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -1,25 +1,47 @@
+#about
+  .twitter-container
+    display: block
+    height: 30px
+    line-height: 30px
+    margin-top: 5px
+  small
+    display: block
+    margin-top: 5px
+
 #mc_embed_signup
-  .control
+  .field
     margin-bottom: 0
   .notification
     margin-top: 0.75rem
+
+#share
+  form
+    height: 30px
+    margin-top: 10px
 
 #social
   align-items: center
   display: flex
   flex-wrap: wrap
-  margin-bottom: 1em
-  justify-content: center
+  margin-top: 5px
+  justify-content: flex-start
   a
     display: inline-block
     font-size: 11px
-    height: 20px
-    line-height: 20px
-    margin: 5px
-  iframe
-    margin: 5px
+    height: 30px
+    line-height: 30px
 
 #newsletter
   .input
     border-color: $white
     box-shadow: none
+
+#sister
+  ul
+    display: flex
+  li
+    display: flex
+    height: 30px
+    margin: 5px 1rem 0 0
+  img
+    height: 30px
