Add pagination sizes, Fix variables docs

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3633,6 +3633,22 @@ a.nav-item.is-tab.is-active {
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
 }
 
+.pagination {
+  font-size: 1rem;
+}
+
+.pagination.is-small {
+  font-size: 0.75rem;
+}
+
+.pagination.is-medium {
+  font-size: 1.25rem;
+}
+
+.pagination.is-large {
+  font-size: 1.5rem;
+}
+
 .pagination,
 .pagination-list {
   align-items: center;
@@ -3667,7 +3683,7 @@ a.nav-item.is-tab.is-active {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  font-size: 0.875rem;
+  font-size: 1em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   justify-content: center;
@@ -6449,15 +6465,21 @@ html.route-index #carbon {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 5px;
   justify-content: flex-start;
 }
 
-#social a {
+#social > iframe,
+#social > a,
+#social > form {
   display: inline-block;
   font-size: 11px;
   height: 30px;
   line-height: 30px;
+  margin-top: 5px;
+}
+
+#social .twitter-share-button {
+  margin-right: 10px;
 }
 
 #newsletter .input {
@@ -6467,6 +6489,7 @@ html.route-index #carbon {
 
 #sister ul {
   display: flex;
+  flex-wrap: wrap;
 }
 
 #sister li {
@@ -6479,16 +6502,22 @@ html.route-index #carbon {
   height: 30px;
 }
 
+#tsp small {
+  display: block;
+}
+
 #images tr td:nth-child(2) {
   width: 320px;
 }
 
 .color {
+  border-radius: 2px;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.5);
   display: inline-block;
   float: left;
-  height: 18px;
-  margin-right: 5px;
-  width: 18px;
+  height: 24px;
+  margin-right: 8px;
+  width: 24px;
 }
 
 .example,
@@ -6496,7 +6525,7 @@ html.route-index #carbon {
   border: 1px solid #ffdd57;
   border-top-right-radius: 3px;
   color: rgba(0, 0, 0, 0.7);
-  padding: 1.25rem 1.5rem;
+  padding: 1.5rem;
   position: relative;
 }
 
