--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -23,13 +23,17 @@
   align-items: center
   display: flex
   flex-wrap: wrap
-  margin-top: 5px
   justify-content: flex-start
-  a
+  > iframe,
+  > a,
+  > form
     display: inline-block
     font-size: 11px
     height: 30px
     line-height: 30px
+    margin-top: 5px
+  .twitter-share-button
+    margin-right: 10px
 
 #newsletter
   .input
@@ -39,9 +43,14 @@
 #sister
   ul
     display: flex
+    flex-wrap: wrap
   li
     display: flex
     height: 30px
     margin: 5px 1rem 0 0
   img
     height: 30px
+
+#tsp
+  small
+    display: block
