--- a/docs/sass/specific.sass
+++ b/docs/sass/specific.sass
@@ -4,8 +4,10 @@
       width: 320px
 
 .color
+  border-radius: 2px;
+  box-shadow: inset 0 0 0 1px rgba(black, 0.5)
   display: inline-block
   float: left
-  height: 18px
-  margin-right: 5px
-  width: 18px
+  height: 24px
+  margin-right: 8px
+  width: 24px
