Add new breakpoint, Explain card

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2632,6 +2632,12 @@ input[type="submit"].button {
   }
 }
 
+@media screen and (min-width: 1384px) {
+  .container {
+    max-width: 1344px;
+  }
+}
+
 .delete {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -2785,10 +2791,6 @@ input[type="submit"].button {
 
 .card-content {
   padding: 1.5rem;
-}
-
-.card-content .title + .subtitle {
-  margin-top: -1.5rem;
 }
 
 .card-footer {
