--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -13,6 +13,44 @@ doc-subtab: card
 
     <hr>
 
+    <div class="content">
+      <p>The <strong>card</strong> component comprises several elements that you can mix and match:</p>
+      <ul>
+        <li>
+          <code>card</code>: the main container
+          <ul>
+            <li>
+              <code>card-header</code>: a horizontal bar with a shadow
+              <ul>
+                <li>
+                  <code>card-header-title</code>: a left-aligned bold text
+                </li>
+                <li>
+                  <code>card-header-icon</code>: a placeholder for an icon
+                </li>
+              </ul>
+            </li>
+            <li>
+              <code>card-image</code>: a fullwidth container for a reponsive image
+            </li>
+            <li>
+              <code>card-content</code>: a multi-purpose container for <em>any</em> other element
+            </li>
+            <li>
+              <code>card-footer</code>: a horizontal list of controls
+              <ul>
+                <li>
+                  <code>card-footer-item</code>: a repeatable list item
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+    <hr>
+
 {% capture card_example %}
 <div class="card">
   <div class="card-image">
@@ -90,6 +128,36 @@ doc-subtab: card
   <div class="column">
 {% highlight html %}
 {{card_header_example}}
+{% endhighlight %}
+  </div>
+</div>
+
+    <hr>
+
+{% capture card_title_example %}
+<div class="card">
+  <div class="card-content">
+    <p class="title">
+      If Tetris has taught me anything it's that errors pile up and accomplishments disappear.
+    </p>
+    <p class="subtitle">
+      Mark Twain
+    </p>
+  </div>
+  <footer class="card-footer">
+    <p class="card-footer-item">
+      <span>More quotes by <a href="#">Mark Twain</a></span>
+    </p>
+  </footer>
+</div>
+{% endcapture %}
+<div class="columns">
+  <div class="column is-one-third">
+{{card_title_example}}
+  </div>
+  <div class="column">
+{% highlight html %}
+{{card_title_example}}
 {% endhighlight %}
   </div>
 </div>
