Verifying docs and making small fixes

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3254,6 +3254,7 @@ a.box:active {
   text-align: left;
   top: 100%;
   z-index: 1000;
+  white-space: nowrap;
 }
 
 .divider {
@@ -3275,12 +3276,12 @@ a.box:active {
   width: 100%;
 }
 
-.dropdown-item:hover, .dropdown-item.active, .dropdown-item:active {
+.dropdown-item:hover, .dropdown-item.is-active, .dropdown-item:active {
   background-color: #f9f9f9;
   text-decoration: none;
 }
 
-.dropdown-item.disabled, .dropdown-item:disabled {
+.dropdown-item.is-disabled, .dropdown-item:disabled {
   background-color: transparent;
   color: #7a7a7a;
   cursor: not-allowed;
