--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -66,6 +66,7 @@ $dropdown-border-color: $grey-lighter
   text-align: left
   top: 100%
   z-index: $dropdown-zindex
+  white-space: nowrap
 
 .divider
   background: $grey-lighter
