--- a/sass/components/_all.sass
+++ b/sass/components/_all.sass
@@ -1,7 +1,7 @@
 @charset "utf-8"
 
 @import "card.sass"
-@import "dropdown"
+@import "dropdown.sass"
 @import "level.sass"
 @import "media.sass"
 @import "menu.sass"
