--- a/docs/_includes/bsa.html
+++ b/docs/_includes/bsa.html
@@ -1,19 +1,28 @@
-<section class="hero is-light bsa">
-  <script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+<script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+
+<section class="hero is-info bsa">
   <div class="container">
-    <div class="bsa-container">
-      <div class="bsa-cpc"></div>
+    <div class="columns is-vcentered">
+      <div class="column is-4">
+        <p class="title">Bulma <strong>Partners</strong></p>
+        <p class="subtitle">Keeping the project alive!</p>
+      </div>
+
+      <div class="column is-8">
+        <div class="bsa-cpc"></div>
+      </div>
     </div>
   </div>
-  <script>
-    (function(){
-      if(typeof _bsa !== 'undefined' && _bsa) {
-      _bsa.init('default', 'CVAIKK3E', 'placement:bulmaio', {
-        target: '.bsa-cpc',
-        align: 'horizontal',
-        disable_css: 'true'
-      });
-        }
-    })();
-  </script>
 </section>
+
+<script>
+  (function(){
+    if(typeof _bsa !== 'undefined' && _bsa) {
+    _bsa.init('default', 'CVAIKK3E', 'placement:bulmaio', {
+      target: '.bsa-cpc',
+      align: 'horizontal',
+      disable_css: 'true'
+    });
+      }
+  })();
+</script>
