--- a/docs/sass/bsa.sass
+++ b/docs/sass/bsa.sass
@@ -1,13 +1,17 @@
 .bsa
   padding: 2rem
 
+.bsa-cpc
+  min-height: 1px
+
 #_default_
   .default-ad
-    background-color: $primary
+    background-color: rgba(black, 0.3)
     border-radius: 2px
-    color: $primary-invert
+    color: $white
     display: inline-block
-    font-size: 12px
+    font-size: 10px
+    font-weight: bold
     padding: 0 4px
     text-transform: uppercase
     vertical-align: top
@@ -15,8 +19,9 @@
     background-color: $white
     border-radius: $radius-large
     box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1)
+    color: $text
     display: block
-    line-height: 1.25
+    line-height: 1.375
     margin-top: 15px
     padding: 15px
     padding-left: 70px
@@ -44,6 +49,9 @@
       font-weight: $weight-bold
 
 +tablet
+  .bsa
+    .columns
+      min-height: 120px
   #_default_
     display: flex
     justify-content: center
