--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -65,7 +65,7 @@
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
               <input type="hidden" name="cmd" value="_s-xclick">
               <input type="hidden" name="hosted_button_id" value="8WMKYSRFN6A78">
-              <input type="image" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/gold-rect-paypaldonate-60px.png" border="0" name="submit" alt="PayPal – The safer, easier way to pay online." height="30">
+              <input type="image" src="{{site.url}}/images/paypal-donate.png" border="0" name="submit" alt="PayPal – The safer, easier way to pay online." height="30">
               <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
             </form>
           </div>
@@ -101,57 +101,6 @@
     </p>
   </div>
 </footer>
-
-{% if page.route == 'index' %}
-  <style type="text/css">
-    .title.is-2 {
-      position: relative;
-    }
-
-    .title.is-2 a {
-      color: #242424;
-      padding-left: 48px;
-      position: relative;
-    }
-
-    .title.is-2 a:hover {
-      color: #00d1b2;
-    }
-
-    .title.is-2 .icon.is-medium {
-      left: 8px;
-      position: absolute;
-      top: 10px;
-    }
-
-    .hero .title.is-2 a {
-      color: white;
-    }
-
-    .hero .title.is-2 a:hover {
-      color: white;
-    }
-
-    .hero.is-primary a.column,
-    .hero.is-primary a.column:hover {
-      color: white;
-    }
-
-    .hero.is-primary a.column:hover .title strong {
-      border-bottom: 1px solid;
-    }
-
-    @media screen and (max-width: 979px) {
-      .title.is-2 a {
-        padding-left: 0;
-      }
-
-      .title.is-2 .icon.is-medium {
-        display: none;
-      }
-    }
-  </style>
-{% endif %}
 
 <script async defer id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script>
 <script async defer type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
