Add spaced title

--- a/docs/_includes/bsa.html
+++ b/docs/_includes/bsa.html
@@ -5,7 +5,7 @@
     <div class="columns is-vcentered">
       <div class="column is-4">
         <p class="title">Bulma <strong>Partners</strong></p>
-        <p class="subtitle">Keeping the project alive!</p>
+        <p class="subtitle">Check out their products!</p>
       </div>
 
       <div class="column is-8">
