--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2540,8 +2540,8 @@ input[type="submit"].button {
   margin-top: -0.75rem;
 }
 
-.title + .subtitle {
-  margin-top: -1.25rem;
+.title:not(.is-spaced) + .subtitle {
+  margin-top: -1.5rem;
 }
 
 .title.is-1 {
@@ -2579,7 +2579,7 @@ input[type="submit"].button {
   color: #363636;
 }
 
-.subtitle + .title {
+.subtitle:not(.is-spaced) + .title {
   margin-top: -1.5rem;
 }
 
