Add new blog post

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1797,7 +1797,8 @@ input[type="submit"].button {
 .label {
   color: #363636;
   display: block;
-  font-weight: bold;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 .label:not(:last-child) {
