--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -7310,7 +7310,8 @@ html.route-index #carbon {
 
 #social > iframe,
 #social > a,
-#social > form {
+#social > form,
+#social > div {
   display: inline-block;
   font-size: 11px;
   height: 30px;
@@ -7318,8 +7319,27 @@ html.route-index #carbon {
   margin-top: 5px;
 }
 
+#social .github-btn {
+  width: 160px;
+}
+
 #social .twitter-share-button {
   margin-right: 10px;
+  min-width: 76px;
+}
+
+#social .paypal-form {
+  min-width: 148px;
+}
+
+#social .fb-like {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 130px;
 }
 
 #newsletter .input {
