--- a/docs/sass/footer.sass
+++ b/docs/sass/footer.sass
@@ -26,14 +26,24 @@
   justify-content: flex-start
   > iframe,
   > a,
-  > form
+  > form,
+  > div
     display: inline-block
     font-size: 11px
     height: 30px
     line-height: 30px
     margin-top: 5px
+  .github-btn
+    width: 160px
   .twitter-share-button
     margin-right: 10px
+    min-width: 76px
+  .paypal-form
+    min-width: 148px
+  .fb-like
+    align-items: center
+    display: flex
+    width: 130px
 
 #newsletter
   .input
