--- a/css/bulma.css
+++ b/css/bulma.css
@@ -633,11 +633,11 @@ a.box:active {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  line-height: 1.25;
-  padding-bottom: 0.5em;
+  line-height: 1.5;
+  padding-bottom: 0.375em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.5em;
+  padding-top: 0.375em;
   position: relative;
   vertical-align: top;
   -webkit-touch-callout: none;
@@ -1530,11 +1530,11 @@ input[type="submit"].button {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  line-height: 1.25;
-  padding-bottom: 0.5em;
+  line-height: 1.5;
+  padding-bottom: 0.375em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.5em;
+  padding-top: 0.375em;
   position: relative;
   vertical-align: top;
   background-color: white;
@@ -1686,7 +1686,6 @@ input[type="submit"].button {
 
 .textarea {
   display: block;
-  line-height: 1.25;
   max-height: 600px;
   max-width: 100%;
   min-height: 120px;
@@ -1709,6 +1708,7 @@ input[type="submit"].button {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  line-height: 1.5;
   position: relative;
   vertical-align: top;
 }
@@ -1781,11 +1781,11 @@ input[type="submit"].button {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  line-height: 1.25;
-  padding-bottom: 0.5em;
+  line-height: 1.5;
+  padding-bottom: 0.375em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.5em;
+  padding-top: 0.375em;
   position: relative;
   vertical-align: top;
   background-color: white;
@@ -2055,6 +2055,10 @@ input[type="submit"].button {
   }
 }
 
+.field-label .label {
+  font-size: inherit;
+}
+
 @media screen and (max-width: 768px) {
   .field-label {
     margin-bottom: 0.5rem;
@@ -2071,8 +2075,22 @@ input[type="submit"].button {
     -ms-flex-negative: 0;
         flex-shrink: 0;
     margin-right: 1.5rem;
-    padding-top: 0.375em;
     text-align: right;
+  }
+  .field-label.is-small {
+    font-size: 0.75rem;
+    padding-top: 0.375em;
+  }
+  .field-label.is-normal {
+    padding-top: 0.375em;
+  }
+  .field-label.is-medium {
+    font-size: 1.25rem;
+    padding-top: 0.375em;
+  }
+  .field-label.is-large {
+    font-size: 1.5rem;
+    padding-top: 0.375em;
   }
 }
 
@@ -4006,11 +4024,11 @@ a.nav-item.is-tab.is-active {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  line-height: 1.25;
-  padding-bottom: 0.5em;
+  line-height: 1.5;
+  padding-bottom: 0.375em;
   padding-left: 0.625em;
   padding-right: 0.625em;
-  padding-top: 0.5em;
+  padding-top: 0.375em;
   position: relative;
   vertical-align: top;
   -webkit-touch-callout: none;
