--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2768,6 +2768,7 @@ input[type="submit"].button {
 @media screen and (min-width: 1000px) {
   .container {
     margin: 0 auto;
+    max-width: 960px;
     width: 960px;
   }
   .container.is-fluid {
@@ -2779,12 +2780,14 @@ input[type="submit"].button {
 
 @media screen and (min-width: 1192px) {
   .container {
+    max-width: 1152px;
     width: 1152px;
   }
 }
 
 @media screen and (min-width: 1384px) {
   .container {
+    max-width: 1344px;
     width: 1344px;
   }
 }
