allow overriding text-rendering

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2329,7 +2329,7 @@ input[type="submit"].button {
   background: transparent;
 }
 
-.notification .delete {
+.notification > .delete {
   position: absolute;
   right: 0.5em;
   top: 0.5em;
