Revert "Include build output"
This reverts commit 5563cd5ef67a1b79cfd5ae2ebe1ad823591f8299.

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -239,7 +239,7 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .is-block-tablet {
     display: block !important;
   }
@@ -289,7 +289,7 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .is-flex-tablet {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
@@ -347,7 +347,7 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .is-inline-tablet {
     display: inline !important;
   }
@@ -393,7 +393,7 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .is-inline-block-tablet {
     display: inline-block !important;
   }
@@ -443,7 +443,7 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .is-inline-flex-tablet {
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
@@ -539,7 +539,7 @@ table th {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .is-hidden-tablet {
     display: none !important;
   }
@@ -1696,7 +1696,7 @@ a.box:active {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .control-label {
     -ms-flex-preferred-size: 0;
         flex-basis: 0;
@@ -1939,7 +1939,7 @@ a.box:active {
           justify-content: flex-end;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .control.is-horizontal {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2491,7 +2491,7 @@ a.box:active {
   font-weight: 700;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .title + .subtitle {
     margin-top: -15px;
   }
@@ -3217,7 +3217,7 @@ a.box:active {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .level-left {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -3228,7 +3228,7 @@ a.box:active {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .level-right {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -3245,6 +3245,7 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
+              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3280,7 +3281,7 @@ a.box:active {
           flex-grow: 1;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .level {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3380,7 +3381,7 @@ a.box:active {
   padding-top: 20px;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .media.is-large .media-number {
     margin-right: 20px;
   }
@@ -3605,7 +3606,7 @@ a.box:active {
   width: 100%;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .modal-content,
   .modal-card {
     margin: 0 auto;
@@ -3758,6 +3759,7 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
+              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -3839,7 +3841,7 @@ a.box:active {
           transform-origin: left bottom;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .nav-toggle {
     display: none;
   }
@@ -3992,7 +3994,7 @@ a.nav-item.is-tab.is-active {
   margin-right: auto;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .nav-right {
     -webkit-box-align: stretch;
         -ms-flex-align: stretch;
@@ -4134,7 +4136,7 @@ a.nav-item.is-tab.is-active {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .pagination > a:not(:first-child) {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
@@ -4825,7 +4827,7 @@ a.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .column.is-narrow, .column.is-narrow-tablet {
     -webkit-box-flex: 0;
         -ms-flex: none;
@@ -5365,7 +5367,7 @@ a.panel-block:hover {
   padding: 0;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .columns.is-grid {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -5394,10 +5396,11 @@ a.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
+              -ms-grid-row-align: center;
           align-items: center;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .columns:not(.is-desktop) {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -5416,6 +5419,7 @@ a.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
+              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: auto;
@@ -5463,7 +5467,7 @@ a.panel-block:hover {
   margin-bottom: 20px !important;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .tile:not(.is-child) {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -5587,7 +5591,7 @@ a.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .hero-buttons {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -6468,14 +6472,14 @@ a.panel-block:hover {
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .hero.is-medium .hero-body {
     padding-bottom: 120px;
     padding-top: 120px;
   }
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .hero.is-large .hero-body {
     padding-bottom: 240px;
     padding-top: 240px;
@@ -6538,7 +6542,7 @@ a.panel-block:hover {
   border-bottom-color: #00d1b2;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .button small {
     color: #4a4a4a;
     left: 0;
@@ -6555,7 +6559,7 @@ body.page-grid .column > .notification {
   text-align: center;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .header-item .button + .button {
     margin-left: 10px;
   }
@@ -6572,7 +6576,7 @@ svg {
   padding: 15px;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   #carbon {
     margin-left: auto;
     margin-right: auto;
@@ -7036,7 +7040,7 @@ html.route-index #carbon {
   vertical-align: top;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .example.is-fullwidth,
   .structure.is-fullwidth {
     border-left: none;
@@ -7119,6 +7123,7 @@ html.route-index #carbon {
 .structure-item.is-structure-container:after {
   -webkit-box-align: start;
       -ms-flex-align: start;
+              -ms-grid-row-align: flex-start;
           align-items: flex-start;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -7159,7 +7164,7 @@ html.route-index #carbon {
   right: 50px;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 769px) {
   .section:not(.is-fullwidth) > .example:not(.is-fullwidth) {
     margin-left: 20px;
     margin-right: 20px;
