Padding not right

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -120,7 +120,7 @@ $input-radius:              $radius !default
     display: block
     font-size: 1em
     outline: none
-    padding-right: 2.5em
+    padding-right: 2.5em !important
     &:hover
       border-color: $input-hover-border
     &::ms-expand
