Fix disabled controls, Fix disabled pagination

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -195,6 +195,7 @@ pre {
 }
 
 pre code {
+  -webkit-overflow-scrolling: touch;
   background: none;
   color: inherit;
   display: block;
@@ -1972,6 +1973,7 @@ input[type="submit"].button {
 .checkbox[disabled],
 .radio[disabled] {
   color: #7a7a7a;
+  cursor: not-allowed;
 }
 
 .radio + .radio {
@@ -4079,7 +4081,9 @@ a.nav-item.is-tab.is-active {
 .pagination-previous[disabled],
 .pagination-next[disabled],
 .pagination-link[disabled] {
-  background: #dbdbdb;
+  background-color: #dbdbdb;
+  border-color: #dbdbdb;
+  box-shadow: none;
   color: #7a7a7a;
   opacity: 0.5;
 }
