--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -9,6 +9,7 @@
 @import "./sass/footer"
 @import "./sass/specific"
 @import "./sass/example"
+@import "./sass/callout"
 @import "./sass/bsa"
 @import "./sass/route"
 
