--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2630,7 +2630,7 @@ input[type="submit"].button {
   margin-bottom: 1.5rem;
 }
 
-.notification a {
+.notification a:not(.button) {
   color: currentColor;
   text-decoration: underline;
 }
@@ -6068,7 +6068,7 @@ label.panel-block:hover {
   color: #0a0a0a;
 }
 
-.hero.is-white a,
+.hero.is-white a:not(.button),
 .hero.is-white strong {
   color: inherit;
 }
@@ -6081,7 +6081,7 @@ label.panel-block:hover {
   color: rgba(10, 10, 10, 0.9);
 }
 
-.hero.is-white .subtitle a,
+.hero.is-white .subtitle a:not(.button),
 .hero.is-white .subtitle strong {
   color: #0a0a0a;
 }
@@ -6159,7 +6159,7 @@ label.panel-block:hover {
   color: white;
 }
 
-.hero.is-black a,
+.hero.is-black a:not(.button),
 .hero.is-black strong {
   color: inherit;
 }
@@ -6172,7 +6172,7 @@ label.panel-block:hover {
   color: rgba(255, 255, 255, 0.9);
 }
 
-.hero.is-black .subtitle a,
+.hero.is-black .subtitle a:not(.button),
 .hero.is-black .subtitle strong {
   color: white;
 }
@@ -6250,7 +6250,7 @@ label.panel-block:hover {
   color: #363636;
 }
 
-.hero.is-light a,
+.hero.is-light a:not(.button),
 .hero.is-light strong {
   color: inherit;
 }
@@ -6263,7 +6263,7 @@ label.panel-block:hover {
   color: rgba(54, 54, 54, 0.9);
 }
 
-.hero.is-light .subtitle a,
+.hero.is-light .subtitle a:not(.button),
 .hero.is-light .subtitle strong {
   color: #363636;
 }
@@ -6341,7 +6341,7 @@ label.panel-block:hover {
   color: whitesmoke;
 }
 
-.hero.is-dark a,
+.hero.is-dark a:not(.button),
 .hero.is-dark strong {
   color: inherit;
 }
@@ -6354,7 +6354,7 @@ label.panel-block:hover {
   color: rgba(245, 245, 245, 0.9);
 }
 
-.hero.is-dark .subtitle a,
+.hero.is-dark .subtitle a:not(.button),
 .hero.is-dark .subtitle strong {
   color: whitesmoke;
 }
@@ -6432,7 +6432,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-primary a,
+.hero.is-primary a:not(.button),
 .hero.is-primary strong {
   color: inherit;
 }
@@ -6445,7 +6445,7 @@ label.panel-block:hover {
   color: rgba(255, 255, 255, 0.9);
 }
 
-.hero.is-primary .subtitle a,
+.hero.is-primary .subtitle a:not(.button),
 .hero.is-primary .subtitle strong {
   color: #fff;
 }
@@ -6523,7 +6523,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-info a,
+.hero.is-info a:not(.button),
 .hero.is-info strong {
   color: inherit;
 }
@@ -6536,7 +6536,7 @@ label.panel-block:hover {
   color: rgba(255, 255, 255, 0.9);
 }
 
-.hero.is-info .subtitle a,
+.hero.is-info .subtitle a:not(.button),
 .hero.is-info .subtitle strong {
   color: #fff;
 }
@@ -6614,7 +6614,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-success a,
+.hero.is-success a:not(.button),
 .hero.is-success strong {
   color: inherit;
 }
@@ -6627,7 +6627,7 @@ label.panel-block:hover {
   color: rgba(255, 255, 255, 0.9);
 }
 
-.hero.is-success .subtitle a,
+.hero.is-success .subtitle a:not(.button),
 .hero.is-success .subtitle strong {
   color: #fff;
 }
@@ -6705,7 +6705,7 @@ label.panel-block:hover {
   color: rgba(0, 0, 0, 0.7);
 }
 
-.hero.is-warning a,
+.hero.is-warning a:not(.button),
 .hero.is-warning strong {
   color: inherit;
 }
@@ -6718,7 +6718,7 @@ label.panel-block:hover {
   color: rgba(0, 0, 0, 0.9);
 }
 
-.hero.is-warning .subtitle a,
+.hero.is-warning .subtitle a:not(.button),
 .hero.is-warning .subtitle strong {
   color: rgba(0, 0, 0, 0.7);
 }
@@ -6796,7 +6796,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-danger a,
+.hero.is-danger a:not(.button),
 .hero.is-danger strong {
   color: inherit;
 }
@@ -6809,7 +6809,7 @@ label.panel-block:hover {
   color: rgba(255, 255, 255, 0.9);
 }
 
-.hero.is-danger .subtitle a,
+.hero.is-danger .subtitle a:not(.button),
 .hero.is-danger .subtitle strong {
   color: #fff;
 }
